--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <div id="app">
       <app></app>
     </div>
+    <script src="./todo.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
