--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>vue-emscripten-todo</h1>
     <div id="app">
-      <app></app>
+      <app ref="app"></app>
     </div>
     <script src="./todo.js"></script>
     <script src="./app.js"></script>
